elements aligned correctly

--- a/style.css
+++ b/style.css
@@ -1,9 +1,12 @@
 body {
   font-family: 'Hanken Grotesk', sans-serif;
 }
+.label {
+  margin-left: -50px;
+}
 
 .attribution {
-  margin-top:20px;
+  margin-top: 20px;
   font-size: 11px;
   text-align: center;
 }
@@ -18,7 +21,7 @@ body {
   justify-content: center;
   align-items: center;
   flex-wrap: wrap;
-  margin-top: 10%;
+  margin-top: 5%;
 }
 .result {
   text-align: center;
@@ -76,15 +79,58 @@ body {
   height: 350px;
   /* text-align: center; */
   padding: 20px;
-}
-.rating-comp {
-  margin: 20px 0px;
-  border: 1px solid ;
   display: flex;
-  justify-content: start;
-  padding: 10px;
+  flex-direction: column;
+  justify-content: center;
+  /* margin-top: -30px; */
+  background-color: hsl(0, 0%, 100%);
+  box-shadow: 25px 23px 49px -13px rgba(0, 0, 0, 0.8);
+  -webkit-box-shadow: 25px 23px 49px -13px rgba(0, 0, 0, 0.8);
+  -moz-box-shadow: 25px 23px 49px -13px rgba(0, 0, 0, 0.8);
+}
+
+.rating-comp {
+  margin: 6px 0px;
+  display: flex;
+  padding: 12px 15px;
+  border-radius: 10px;
+  justify-content: space-between;
 }
 
 .red {
-background-color: red;
+  color: hsl(0, 100%, 67%);
+  background-color: hsla(0, 100%, 67%, 0.1);
+}
+.yellow {
+  color: hsl(39, 100%, 56%);
+  background-color: hsla(39, 100%, 56%, 0.1);
+}
+.green {
+  color: hsl(166, 100%, 37%);
+  background-color: hsla(166, 100%, 37%, 0.1);
+}
+.blue {
+  color: hsl(234, 85%, 45%);
+  background-color: hsla(234, 85%, 45%, 0.1);
+  margin-bottom: 30px;
+}
+
+button {
+  align-self: center;
+  padding: 10px 70px;
+  border-radius: 22px;
+  border-style: none;
+  background-color: hsl(224, 30%, 27%);
+  color: white;
+  font-family: 'Hanken Grotesk', sans-serif;
+}
+
+.space-left {
+  margin-right: 15px;
+}
+.grey-num {
+  color: hsla(224, 30%, 27%, 0.5);
+}
+.black-num {
+  color: hsl(224, 30%, 27%);
 }
